--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
   bottom: 0;
   left: 0;
   background: #4196f6;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .header {
@@ -51,6 +55,16 @@ body {
 
 }
 
+.circle-0 {
+  fill: #531078 !important;
+}
+.circle-1 {
+  fill: #ff8000 !important;
+}
+.circle-2 {
+  fill: #ffff00 !important;
+}
+
 svg {
   margin-top: -20px;
 }
@@ -63,9 +77,10 @@ path {
 
 .legend {
   font-size: 12px;
-  width: 0;
+  width: 90px;
   padding: 0 40px;
   position: relative;
+  color: white;
 }
 
 .legend-3 {
@@ -73,7 +88,7 @@ path {
 }
 
 .legend-1::before {
-  background: #ff0000;
+  background: #531078;
   content: "";
   width: 20px;
   height: 20px;
